--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -14,6 +14,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-my-custom-rules": "^1.0.1",
     "jest": "^24.9.0"
   }
 }
