--- a/0x01-ES6_promise/package.json
+++ b/0x01-ES6_promise/package.json
@@ -16,5 +16,8 @@
     "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-my-custom-rules": "^1.0.1",
     "jest": "^24.9.0"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.2"
   }
 }
